Documentation upload user avatar
