# src/modules/accounts/useCases/createUser/CreateUserController.ts
@@ -4,7 +4,7 @@ import { CreateUserUseCase } from "./CreateUserUseCase";
 
 class CreateUserController {
     async handle(request: Request, response: Response): Promise<Response> {
-        const { name, lastname, email, password, avatar } = request.body;
+        const { name, lastname, email, password, } = request.body;
 
         const createUserUseCase = container.resolve(CreateUserUseCase);
 
@@ -13,7 +13,6 @@ class CreateUserController {
             lastname,
             email,
             password,
-            avatar
         })
 
         return response.status(201).send();
