# src/swagger.json
@@ -8,6 +8,150 @@
 
     },
     "paths":{
+        "/users":{
+            "post":{
+                "summary": "Create User",
+                "description": "Route to create a user",
+                "tags": ["Users"],
+                "requestBody": {
+                    "content":{
+                        "application/json":{
+                            "schema": {
+                                "type": "object",
+                                "properties":{
+                                    "name":{
+                                        "type": "string"
+                                    },
+                                    "lastname":{
+                                        "type": "string"
+                                    },
+                                    "email":{
+                                        "type": "string"
+                                    },
+                                    "password":{
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description": "Created"
+                    },
+                    "400":{
+                        "description": "Invalid information sended"
+                    },
+                    "409":{
+                        "description": "User already exists"
+                    },
+                    "500":{
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/sessions":{
+            "post":{
+                "summary": "Authentication user",
+                "description": "Authentication user",
+                "tags": ["Users"],
+                "requestBody": {
+                    "content":{
+                        "application/json":{
+                            "schema": {
+                                "type": "object",
+                                "properties":{
+                                    "email":{
+                                        "type": "string"
+                                    },
+                                    "password":{
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "200":{
+                        "description": "OK",
+                        "content":{
+                            "application/json":{
+                                "schema":{
+                                    "type": "object",
+                                    "properties":{
+                                        "token":{
+                                            "type": "string"
+                                        },
+                                        "user":{
+                                            "type": "object",
+                                            "properties":{
+                                                "id":{
+                                                    "type": "string"
+                                                },
+                                                "email":{
+                                                    "type": "string"
+                                                }
+                                            }
+                                        },
+                                        "refresh_token":{
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400":{
+                        "description": "Invalid information sended"
+                    },
+                    "401":{
+                        "description": "Email or password incorrect"
+                    },
+                    "409":{
+                        "description": "User already exists"
+                    },
+                    "500":{
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/users/avatar":{
+            "patch":{
+                "summary": "Upload user avatar",
+                "description": "Upload avatar User",
+                "tags": ["Users"],
+                "security":[{"bearerAuth": []}],
+                "requestBody": {
+                    "content":{
+                        "multipart/form-data":{
+                            "schema":{
+                                "type": "object",
+                                "properties":{
+                                    "avatar":{
+                						"type": "file"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "204":{
+                        "description": "OK"
+                    },
+                    "401":{
+                        "description": "Unauthorized"
+                    },
+                    "500":{
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/products":{
             "post":{
                 "summary": "Create product",
@@ -189,7 +333,12 @@
                     "content":{
                         "application/json":{
                             "schema": {
-                                "$ref": "#/components/schemas/Supermarket"
+                                "type": "object",
+                                "properties":{
+                                    "name":{
+                                        "type": "string"
+                                    }
+                                }
                             },
                             "examples":{
                                 "supermarket":{
@@ -307,7 +456,18 @@
                     "content":{
                         "application/json":{
                             "schema": {
-                                "$ref": "#/components/schemas/Product"
+                                "type": "object",
+                                "properties":{
+                                    "supermarket_id":{
+                                        "type": "string"
+                                    },
+                                    "product_id":{
+                                        "type": "string"
+                                    },
+                                    "price":{
+                                        "type": "number"
+                                    }
+                                }
                             },
                             "examples":{
                                 "product":{
@@ -364,7 +524,6 @@
                     "examples":{
                         "supermarket_name":{
                             "value": "prezunic"
-                
                         }
                     }
                 },
@@ -415,7 +574,15 @@
                     "content":{
                         "application/json":{
                             "schema": {
-                                "$ref": "#/components/schemas/Product"
+                                "type": "object",
+                                "properties":{
+                                    "price_id":{
+                                        "type": "string"
+                                    },
+                                    "price":{
+                                        "type": "number"
+                                    }
+                                }
                             },
                             "examples":{
                                 "product":{
@@ -461,6 +628,38 @@
     },
     "components":{
             "schemas": {
+                "User":{
+                    "type": "object",
+                    "properties":{
+                        "id":{
+                            "type": "string"
+                        },
+                        "name":{
+                            "type": "string"
+                        },
+                        "lastname":{
+                            "type": "string"
+                        },
+                        "isAdmin":{
+                            "type": "string"
+                        },
+                        "email":{
+                            "type": "string"
+                        },
+                        "password":{
+                            "type": "string"
+                        },
+                        "avatar":{
+                            "type": "string"
+                        },
+                        "created_at":{
+                            "type": "string"
+                        },
+                        "updated_at":{
+                            "type": "string"
+                        }
+                    }
+                },
                 "Product":{
                     "type": "object",
                     "properties":{
